# circuit_simulation

./: CMakeLists.txt  LICENSE.txt  README.md  visualization.py
.github/workflows/: run_test.yml
docs/: Doxyfile
docs/html/: _c_circuit_8cpp.html  _c_circuit_8cpp.js  _c_circuit_8cpp_source.html  _c_circuit_8h.html  _c_circuit_8h.js  _c_circuit_8h_source.html  _c_simulator_8cpp.html  _c_simulator_8cpp.js  _c_simulator_8cpp_source.html  _c_simulator_8h.html  _c_simulator_8h.js  _c_simulator_8h_source.html  _c_unit_8cpp.html  _c_unit_8cpp_source.html  _c_unit_8h.html  _c_unit_8h.js  _c_unit_8h_source.html  _directed_graph_8cpp.html  _directed_graph_8cpp.js  _directed_graph_8cpp_source.html  _directed_graph_8hpp.html  _directed_graph_8hpp.js  _directed_graph_8hpp_source.html  _genetic_algorithm_8cpp.html  _genetic_algorithm_8cpp.js  _genetic_algorithm_8cpp_source.html  _genetic_algorithm_8hpp.html  _genetic_algorithm_8hpp.js  _genetic_algorithm_8hpp_source.html  _unittests_8h.html  _unittests_8h.js  _unittests_8h_source.html  annotated.html  annotated_dup.js  class_c_unit-members.html  class_c_unit.html  class_c_unit.js  class_circuit-members.html  class_circuit.html  class_circuit.js  (+102 more)
docs/latex/: _c_circuit_8cpp.tex  _c_circuit_8cpp_source.tex  _c_circuit_8h.tex  _c_circuit_8h_source.tex  _c_simulator_8cpp.tex  (+71 more)
include/: CCircuit.h  CSimulator.h  CUnit.h  DirectedGraph.hpp  GeneticAlgorithm.hpp
src/: CCircuit.cpp  CMakeLists.txt  CSimulator.cpp  CUnit.cpp  DirectedGraph.cpp  GeneticAlgorithm.cpp  conver-plot.ipynb  main.cpp
tests/: CMakeLists.txt  Unittests.h  test_Circuit.cpp  test_CircuitEvaluation.cpp  test_CircuitValidity.cpp  test_Crossover.cpp  test_Cunit.cpp  test_DirectedGraph.cpp  test_GeneticAlgorithm.cpp  test_Individual.cpp  test_RandomCircuit.cpp  test_all.cpp
utils/: AlgorithmEvaluator.cpp  CMakeLists.txt
(+70 files in other folders)
